# LiOAvIZ-Lab2

./: CMakeLists.txt  README.md  Report_2.docx  graph.py  main.cpp
scripts/: graph.py
src/: main.cpp  matrix.cpp  matrix.h  sorts.cpp  sorts.h
